services/nginx+LB+remote_state+templatefile/TFs/TF1/load_balancing_&_stuff....tf
## certzz

#resource "tls_private_key" "tls00" {
#  algorithm = "RSA"
#  ## Security Notice
#  ## The private key generated by this resource will be stored unencrypted in your Terraform state file. Use of this resource for production deployments is not recommended. Instead, generate a private key file outside of Terraform and distribute it securely to the system where Terraform will be run.
#}

#resource "tls_self_signed_cert" "tls_self_signed_cert00" {
#  key_algorithm   = "RSA"
#  private_key_pem = tls_private_key.tls00

#  subject {
#    common_name  = "acucaraccia.com"
#    organization = "Pula Mea Dot Com"
#  }
#
#  validity_period_hours = 12
#
#  allowed_uses = ["key_encipherment", "digital_signature", "server_auth" ]
#
#}

resource "aws_acm_certificate" "acm_certificate00" {
  # 1st example
  #domain_name       = "example.sex"
  #validation_method = "DNS"

  # 2nd example
#  private_key      = tls_private_key.tls00.private_key_pem # priv
  private_key      = var.private_key
##  certificate_body = tls_self_signed_cert.tls_self_signed_cert00.cert_pem # pub
  certificate_body = var.public_certificate
}


resource "aws_lb_listener_certificate" "lb_certificate00" {
  listener_arn    = aws_lb_listener.listener00.arn
  certificate_arn = aws_acm_certificate.acm_certificate00.arn
}

###########################################################################

## LB resources

resource "aws_lb" "lb00" {
  name               = "lb00"
  internal           = false
  load_balancer_type = "application"
  security_groups    = [ aws_security_group.sg00.id ]
  subnets            = [ aws_subnet.privsubnet00a.id, aws_subnet.privsubnet00b.id, aws_subnet.privsubnet00c.id ]

#  access_logs {
#    bucket  = aws_s3_bucket.lb_logs.id
#    prefix  = "lb00"
#    enabled = true
#  }
}

resource "aws_lb_target_group" "lb_target_group00" {
  name     = "lb-target-group00"
  port     = 80
  protocol = "HTTP"
  vpc_id   = aws_vpc.vpc00.id

#  target_type = "ip/instance/lambda/alb"

  target_group_health {
    dns_failover {
      minimum_healthy_targets_count      = 1
      minimum_healthy_targets_percentage = "off"
    }

    unhealthy_state_routing {
      minimum_healthy_targets_count      = 1
      minimum_healthy_targets_percentage = "off"
    }
  }
}

#resource "aws_lb_target_group_attachment" "pizda" {
#  target_group_arn = aws_lb_target_group.rahatt.arn
#  target_id        = aws_instance.sex.id
#  port             = 80
#}


resource "aws_lb_listener" "listener00" {
  load_balancer_arn = aws_lb.lb00.arn
  port              = "443"
  protocol          = "HTTPS"
  ssl_policy        = "ELBSecurityPolicy-2016-08"
  certificate_arn   = aws_lb_listener_certificate.lb_certificate00.arn

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.lb_target_group00.arn
  }

}
